--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 320px;
-  height: 450px;
+  width: 340px;
+  height: 480px;
   padding: 20px;
   background-color: var(--color-white);
   box-shadow: 7px 7px black;
@@ -62,13 +62,13 @@ body {
 }
 
 #graphic {
-  width: 320px;
+  width: 340px;
   border-radius: 0.3rem;
 }
 
 #category {
   padding: 0.3rem;
-  margin-top: 20px;
+  margin-top: 25px;
   font-size: calc(0.8 * var(--font-paragraph));
   font-weight: var(--font-weight-bold);
   background-color: var(--color-yellow);
@@ -96,24 +96,24 @@ h1:hover {
   width: 90%;
   font-size: var(--font-paragraph);
   color: var(--color-gray500);
-  margin-top: 0;
+  margin-top: 5px;
 }
 
 #author {
-  margin-top: 0;
+  margin-top: 5px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
 #author-img {
-  height: 20px;
+  height: 30px;
 }
 
 #author-name {
 margin-left: 10px;
 font-weight: var(--font-weight-bold);
-font-size: calc(0.8 * var(--font-paragraph));
+font-size: var(--font-paragraph);
 }
 
 .attribution, .attribution a {
@@ -125,7 +125,7 @@ font-size: calc(0.8 * var(--font-paragraph));
 @media (max-width: 500px) {
   #frame { 
     width: 300px;
-    height: 420px;
+    height: 440px;
     padding: 15px;
   }
   
